<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondosplash"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:text="@string/acerca"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/univ"
                android:textColor="@color/verdeoscuro"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/escudo"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/imgunicorf" />

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/autor"
                android:textColor="@color/colorazuloscuro"
                android:textSize="19sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="- - -\nColaboración con\n UBICOR"
                android:drawableBottom="@drawable/ubicar"
                android:textColor="@color/verdeoscuro"
                android:textStyle="bold"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <Space
                    android:layout_width="4dp"
                    android:layout_height="3dp" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="60dp"
                    android:background="@android:color/holo_orange_light"/>

                <Space
                    android:layout_width="4dp"
                    android:layout_height="3dp" />

                <ImageView
                    android:id="@+id/unicorapp"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:gravity="center"
                    android:src="@drawable/notasunicorapp"
                    android:textColor="#ffaa66aa"
                    android:textSize="20sp" />
                <Space
                    android:layout_width="4dp"
                    android:layout_height="3dp" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="60dp"
                    android:background="@android:color/holo_orange_light" />

                <Space
                    android:layout_width="4dp"
                    android:layout_height="3dp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:text="@string/Version"
                android:textSize="12sp"
                android:textStyle="italic" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:text="@string/declaracion"
                android:textColor="@android:color/holo_purple"
                android:textSize="20sp"
                android:textStyle="italic" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:text="@string/marca"
                android:textSize="16sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:text="@string/marca1"
                android:textSize="16sp" />

        </LinearLayout>


    </ScrollView>


</LinearLayout>
