<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SplashScreen">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        android:background="@drawable/fondosplashn"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/fondogray"
            android:text="@string/marca3"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/LogoInicio"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:contentDescription="Logo Notas UnicorApp"
            android:src="@drawable/notasunicorapp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center"
            android:paddingTop="15dp"
            android:textColor="@color/fondogray"
            android:text="@string/marca"
            android:textSize="25sp"
            android:textStyle="italic" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center"
            android:textColor="@color/fondogray"
            android:text="@string/marca1"
            android:textSize="22sp"
            android:textStyle="italic" />

    </LinearLayout>



</LinearLayout>
